src/test/ui/parser/issues/issue-81806.stderr
error: expected identifier, found keyword `impl`
  --> $DIR/issue-81806.rs:2:1
   |
LL | trait T { const
   |         - while parsing this item list starting here
LL | impl
   | ^^^^ expected identifier, found keyword
LL | }
   | - the item list ends here
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL | r#impl
   | ~~~~~~

error: aborting due to previous error

